Align checkboxes in tables correctly

--- a/frontend/src/global_styles/content/_wiki.sass
+++ b/frontend/src/global_styles/content/_wiki.sass
@@ -64,9 +64,8 @@ div.wiki
       border: 1px solid #bbb
       text-align: left
 
-      .task-list
+      ul, ol
         margin-bottom: 0
-        margin-left: 5px
 
     th
       background: rgba(0, 0, 0, 0.05)
