--- a/frontend/src/global_styles/content/editor/_markdown.sass
+++ b/frontend/src/global_styles/content/editor/_markdown.sass
@@ -23,7 +23,6 @@ div.ck-editor__preview
 
   ul.task-list
     list-style: none
-    margin-left: 40px
 
     .task-list-item
       *
